<resources>
    <string name="app_name">HackathonWinnerApp</string>
    <string name="sample_text">Sample text</string>
    <string name="shared_pref_name">Auth data preferences</string>
    <string name="enter_login">Username</string>
    <string name="enter_password">Password</string>
    <string name="enter_name">Name</string>
    <string name="enter_password_again">Repeat password</string>
    <string name="login_title">Login</string>
    <string name="registration_title">Create new account</string>
    <string name="sign_in">Log in</string>
    <string name="sign_up">Create new account</string>
    <string name="remember_me">Remember me</string>
    <string name="error_wrong_password">Passwords don\'t match</string>
    <string name="is_mentor">I am a mentor</string>
    <string name="success">Success</string>
    <string name="appbar_item_mentor">Mentor</string>
    <string name="appbar_item_log_out">Log out</string>
    <string name="appbar_item_lectures">Lectures</string>
    <string name="appbar_item_map">Map</string>
    <string name="course_title">Title:</string>
    <string name="course_short_description">Short description:</string>
    <string name="course_full_description">Full description:</string>
    <string name="course_image_url">Image url:</string>
    <string name="course_tags">Tags:</string>
    <string name="show_only_favorites">Favourite only</string>
    <string name="lecture_title">Lecture title</string>
    <string name="youtube_link">Youtube link</string>
    <string name="github_repo">Github repositry link</string>
    <string name="telegram_channel">Telegram channel link</string>
    <string name="img_url">Image preview link</string>
    <string name="tags">Tags</string>
    <string name="date_label">Date</string>
    <string name="date_picker_title">Date of lecture</string>
    <string name="time_picker">Time of lecture</string>
</resources>